--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
