deploy for testing

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite --host",
     "build": "vite build",
+    "build:dev": "vite build --mode development",
+    "build:prod": "vite build --mode production",
+    "preview": "vite preview",
+    "preview:host": "vite preview --host",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "test:api": "node scripts/test-api.js",
+    "start": "npm run preview",
+    "serve": "npm run preview"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
